double scroll bar for menu resolved

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -49,6 +49,7 @@ body {
   -webkit-overflow-scrolling: touch;
 
   &::-webkit-scrollbar {
+    display:none;
     width: $size-xs;
     height: $size-xs;
 
